<resources>
    <string name="app_name">SmsBomber</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="sms_receive"> SMS reçus</string>
    <string name="message_receive_placeholder">Message reçu</string>
    <string name="message_answer_placeholder">Réponse automatique souhaité</string>
    <string name="add_answer">Ajouter cettre réponse automatique</string>
    <string name="save_answer">Ajouter une réponse automatique</string>
    <string name="sms_bomber">Sms Bomber</string>
    <string name="message_bomber">Message à envoyer</string>
    <string name="message_bomber_number">Nombre d\'envois</string>
    <string name="make_bomber">Envoyer</string>
    <string name="save_answer_list">Réponses automatiques :</string>
    <string name="message_bomber_phone_number">A quel numéro ?</string>
    <string name="contact_name">Nom</string>
    <string name="contact_phone">Numéro</string>
    <string name="contact_stat">Statistiques</string>
</resources>
